# cosypose

./: .gitmodules  bop_toolkit_challenge.patch  bop_toolkit_cosypose.patch  pyproject.toml  setup.py
cosypose/: bop_config.py  config.py
cosypose/bop_toolkit_lib/: config.py  eval_bop19.py  eval_bop19_dummy.py  eval_siso.py  eval_vivo.py  inout.py  misc.py  transform.py
cosypose/datasets/: augmentations.py  bop.py  datasets_cfg.py  synthetic_dataset.py
cosypose/evaluation/: data_utils.py
cosypose/evaluation/eval_runner/: detection_eval.py  pose_eval.py
cosypose/evaluation/meters/: detection_meters.py  pose_meters.py  utils.py
cosypose/evaluation/pred_runner/: detections.py  multiview_predictions.py
cosypose/integrated/: icp_refiner.py
cosypose/lib3d/: transform.py  transform_ops.py
cosypose/models/: mask_rcnn.py  pose.py
cosypose/multiview/: ransac.py
cosypose/recording/: bop_recording_scene.py  record_chunk.py  record_dataset.py
cosypose/rendering/: bullet_batch_renderer.py
cosypose/scripts/: convert_models_to_urdf.py  download.py  example_multigpu.py  fix_dataset.py  inspect_dataset.py  run_bop_eval.py  run_bop_inference.py  run_cosypose_eval.py  run_custom_scenario.py  run_dataset_recording.py  run_detection_eval.py
cosypose/simulator/: base_scene.py  body.py  camera.py
cosypose/training/: detector_models_cfg.py  train_detector.py  train_pose.py
cosypose/utils/: distributed.py  xarray.py
cosypose/visualization/: multiview.py
